Kubernetes/Automation/ArgoCD/yamls/ig-argocd.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argocd-security
  namespace: argocd
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-websecure
  namespace: argocd
  annotations:
    gethomepage.dev/href: "https://argocd.domain.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: "ArgoCD"
    gethomepage.dev/group: DevOps
    gethomepage.dev/icon: argo-cd.svg
    gethomepage.dev/app: argocd-server # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: "ArgoCD"
    #gethomepage.dev/showStats: "true"
    #gethomepage.dev/widget.type: "emby"
    #gethomepage.dev/widget.url: "https://emby.example.com"
    #gethomepage.dev/pod-selector: ""
    #gethomepage.dev/weight: 10 # optional
    #gethomepage.dev/instance: "public" # optional
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.domain.com`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
          serversTransport: argocd-transport
      middlewares:
        - name: argocd-security
    - kind: Rule
      match: Host(`argocd.domain.com`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: argocd-domain-com
    options:
      name: argocd-tlsoptions
